deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-slack-client
  labels:
    app: slack-client
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-client
  template:
    metadata:
      labels:
        app: slack-client
    spec:
      containers:
        - name: prod-slack-client
          image: kscout/slack-client:dev-5
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: prod-slack-client
  labels:
    app: slack-client
spec:
  type: ClusterIP
  selector:
    app: slack-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prod-slack-client
  labels:
    app: slack-client
spec:
  host: slack.bot.kscout.io
  path: /
  to:
    kind: Service
    name: prod-slack-client
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
status:
  ingress:
    - host: slack.bot.kscout.io
